# matriculaciones_moodle

./: .env.example  .gitignore  API_resume.md  CAMBIOS_FORMATO_NACIMIENTO.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  api_reference.md  pyproject.toml  test_conversion_simple.py  test_formato_iso.py  test_pocketbase_real.py  test_validacion_nacimiento.py
src/matriculaciones/: __init__.py  config.py  main.py  models.py  moodle.py  pocketbase.py
